# NetoTemplate

./: CMakeLists.txt  libio.cppm
firstTask/: main.cpp
secondTask/: Table.hpp  main.cpp
thirdTask/: main.cpp
